# Studvisor

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed_all.py  studvisor.db
.github/workflows/: ci.yml
alembic/: env.py
backend/: main.py  requirements.txt  seed_all.py
backend/api/routes/: __init__.py  admin.py  ai_engine.py  attendance.py  auth.py  chat.py  extended_routes.py  faculty_portal.py  features.py  fees.py  gpa.py  leave.py  library.py  marks.py  misc_routes.py  reports.py  search.py  student.py
backend/app/: add_institution_id.py  chatbot.py  crud.py  database.py  middleware.py  models.py  schemas.py
backend/core/: __init__.py  ai_context.py  config.py  security.py
backend/db/: session.py
backend/middleware/: audit_log.py  role_guard.py
backend/services/: advanced_analytics.py  ai_service.py  anonymity_service.py  attendance_service.py  audit_service.py  background_tasks.py  complaint_service.py  fee_service.py  gamification_service.py  gpa_service.py  merit_service.py  notification_service.py  plagiarism_service.py  predictive_service.py  sentiment_service.py  study_schedule_service.py  timetable_service.py  voice_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.jsx  app.css  fix_css.py  index.css  linways.css  main.jsx  v4.css
frontend/src/components/: AttendanceTrend.jsx  ChatBox.jsx  DataTable.jsx  EmptyState.jsx  ErpLayout.jsx  (+15 more)
tests/: conftest.py  test_api.py
(+51 files in other folders)
