[project]
name = "Studvisor-erp"
version = "2.0.0"
description = "AI-powered Unified Campus Intelligence Platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

